# x9core

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.cursor/rules/: docstrings.mdc  workflow-incremental.mdc
.github/workflows/: ci.yml
docker/: api.Dockerfile
scripts/: check-docker.sh  compose.sh  setup-docker.sh  setup-local.sh
src/x9core/: __init__.py
src/x9core/api/: __init__.py  dependencies.py  main.py
src/x9core/api/routes/: __init__.py  search.py
src/x9core/api/schemas/: __init__.py  search.py
src/x9core/application/: __init__.py
src/x9core/application/ports/: __init__.py  search_provider.py
src/x9core/application/use_cases/: search_by_dork.py
src/x9core/domain/: __init__.py  exceptions.py
src/x9core/domain/entities/: __init__.py  search_hit.py
src/x9core/domain/ports/: __init__.py  clock.py
src/x9core/domain/services/: dedup_service.py  dork_builder.py  url_normalizer.py
src/x9core/domain/value_objects/: __init__.py  dork.py  time_window.py
src/x9core/infrastructure/: __init__.py  config.py
src/x9core/infrastructure/scraping/: __init__.py  fake_search_provider.py  google_serp_parser.py
tests/: conftest.py
tests/e2e/: test_health.py  test_search_dork.py
tests/fixtures/google/: sample_serp.html
tests/unit/api/: test_main.py
tests/unit/application/: test_search_by_dork.py
tests/unit/domain/: test_dork.py  test_dork_builder.py  test_exceptions.py  test_search_hit.py  test_time_window.py
tests/unit/infrastructure/: test_config.py
tests/unit/infrastructure/scraping/: test_fake_search_provider.py  test_google_serp_parser.py
