[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x9core"
version = "0.1.0"
description = "API de monitoramento e scraping com Google Dorks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.42.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.2.0",
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-recording>=0.13.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "time-machine>=2.16.0",
    "testcontainers[postgres]>=4.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/x9core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: testes que dependem de infraestrutura externa",
    "e2e: testes ponta a ponta da API",
    "vcr: testes com cassettes HTTP gravadas",
]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers.*",
]

[tool.coverage.run]
source = ["x9core"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC", "D"]
ignore = ["D104", "D401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["x9core"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
